Fix bug with number alignment

--- a/style.css
+++ b/style.css
@@ -32,8 +32,7 @@ p{
     background-color: lightyellow;
     display: flex;
     justify-content: right;
-    align-items: space-between;
-    
+    align-items: center;
 }
 
 .buttons {
